feat: Add chat and negotiation to shifts and ETA to assignments
