# apps/api/openapi.json
@@ -2169,6 +2169,28 @@
             "type": "boolean",
             "title": "Tracking Active"
           },
+          "eta_minutes": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Eta Minutes"
+          },
+          "distance_m": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Distance M"
+          },
           "last_ping": {
             "anyOf": [
               {
